<resources>
    <string name="app_name">Free HUD Display</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="tolerance">±0m</string>
    <string name="tap_to_switch_units">TAP TO SWITCH UNITS</string>
    <string name="speed">0</string>
    <string name="km_h">km/h</string>
    <string name="long_press_to_exit">LONG TAP TO EXIT</string>
</resources>